error_templates/python/test_files/syntax_error_eol/test.txt
name: "EOL"
template: "Python.SyntaxError"
---
  File "syntax_error_eol.py", line 1
    print("Hello, world!"
         ^
SyntaxError: '(' was never closed
===
template: "Python.SyntaxError"
---
# SyntaxError
This error occurs when there is a syntax error in the code, and the open parenthesis `(` is not closed properly.
```
print("Hello, world!"
^^^^^^^^^^^^^^^^^^^^^

```
## Steps to fix
### Close the open parenthesis
Ensure that the open parenthesis (`(`) is closed properly.
```diff
- print("Hello, world!"
+ print("Hello, world!")

```
